tests/purs/passing/ImportQualified.purs
module Main where

import Prelude
import Effect
import M1
import Effect.Console as C

main = C.log (log "Done")
