tests/purs/failing/QualifierLowercaseStart.purs
-- @shouldFailWith ErrorParsingModule
module qualifierStartsWithMinuscule.OkModuleName where

import Effect.Console (log)

main = log "Done"
